# RealTimeSignalVizualization

./: .gitignore  pyproject.toml
rtsv/: main.py
rtsv/Processing/: Convertor.py  ScoutProcessing.py
rtsv/UI/: Worker.py
rtsv/UI/PlotWidget/: PlotWidget.py  PlotWidget_ui.py  PlotWidget_ui.ui
rtsv/UI/SettingWidget/: SettingWidget.py  SettingWidget_ui.py  SettingWidget_ui.ui
rtsv/UI/Themes/: DarkTheme.stylesheet
rtsv/icon/: resources.qrc
